--- a/resume.tex
+++ b/resume.tex
@@ -14,47 +14,42 @@
 
 \begin{rSection}{Experience}
 
-\begin{rSubsection}{Signature Orthodontics Inc}{August 2017 - present}{VP of Software}{Cambridge, MA}
+\begin{rSubsection}{Meta Tooth LLC}{December 2018 - present}{Principal}{Swampscott, MA}
+\item A software, product, and business development consultancy in dental \& advanced manufacturing.
+\end{rSubsection}
+
+\begin{rSubsection}{Signature Orthodontics Inc}{August 2017 - December 2018}{VP of Software}{Cambridge, MA}
 \item Responsible for medical device and workflow software in support of company's first sale.  Led development and growth of software team. Contributed system architecture, implementation, regulatory documentation, project management, and product management.
-\item JavaScript, Ember.js, three.js, Ruby, C++, Docker, NGINX, Postgresql, Ubuntu, Git, bash, Azure DevOps, Azure
+\item \textbf{K183542} Signature Orthodontics System, 2019-01-02
+\item \textbf{K181271} Signature Orthodontics System, 2018-06-13
 \end{rSubsection}
 
 
-\begin{rSubsection}{Dentsply Sirona Implants}{June 2014 - August 2017}{Director, Global Digital Product Development}{Waltham, MA}
-\item Responsible for strategy and project planning to meet business goals of networked workflows.  Led development of data analysis & visualization tools to identify key performance indicators.
-\item C++, Ruby, Rails, Capistrano, NGINX, Postgresql, CentOS, Subversion, Bugzilla, Cygwin, bash, rackspace.com
+\begin{rSubsection}{Atlantis - Dentsply Sirona Implants}{June 2014 - August 2017}{Director, Global Digital Product Development}{Waltham, MA}
+\item Responsible for strategy and project planning to meet business goals of networked workflows.  Led development of data analysis \& visualization tools to identify key performance indicators.
+\item \textbf{US Patent \#D787,061S} SCAN BODY FOR DENTAL IMPLANT PROCEDURES
 \end{rSubsection}
 
-\begin{rSubsection}{DENTSPLY Implants}{August 2010 - May 2014}{Manager, Global Digital Product Development}{Waltham, MA}
+\begin{rSubsection}{Atlantis - DENTSPLY Implants}{August 2010 - May 2014}{Manager, Global Digital Product Development}{Waltham, MA}
 \item Responsible for business relationships and collaboration agreements with Partners on digital workflows.  Led development of API to meet business objectives.
-\item Ruby, Rails, Capistrano, Apache, Postgresql, CentOS, Subversion, Bugzilla, Cygwin, bash, rackspace.com
 \end{rSubsection}
 
 
-\begin{rSubsection}{Astra Tech, Inc}{January 2007 - July 2010}{Consulting Software Engineer}{Waltham, MA}
+\begin{rSubsection}{Atlantis - Astra Tech, Inc}{January 2007 - July 2010}{Consulting Software Engineer}{Waltham, MA}
 \item Responsible for front-end and API development. Software lead for industry leading B2B platform. Collaborated with Partners to deliver integrated workflows.
-\item Ruby, Rails, Capistrano, Apache, Postgresql, CentOS, Subversion, Bugzilla, Cygwin, bash, rackspace.com
 \end{rSubsection}
 
 
 \begin{rSubsection}{Atlantis Components, Inc}{August 2000 - Januaray 2007}{Senior Software Engineer}{Cambridge, MA}
 \item Responsible for automation of acquisition, design, and manufacturing workflows. Software Lead for industry's first CAD/CAM dental implant abutment.
-\item C++, Ruby, Rails, Apache, Postgresql, RedHat, CVS, Bugzilla, CMake, Cygwin, bash
 \end{rSubsection}
 
 
 \begin{rSubsection}{Freudenberg-NOK General Partnership}{June 1996 - September 1999}{Product Engineer}{Bristol, NH}
 \item My first and great experience in Kaizen.
-\item Unigraphics NX, C
-\end{rSubsection}
-  
-\begin{rSubsection}{}{}{}{}
-\item \textbf{US Patent \#D787,061S} SCAN BODY FOR DENTAL IMPLANT PROCEDURES
 \end{rSubsection}
 
 \end{rSection}
-
-
 
 \begin{rSection}{Education}
 
@@ -78,7 +73,7 @@ High School Diploma
 
 \begin{rSection}{Technical Strengths}
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Computer Languages & JavaScript, Ruby, C\//C++, R, SQL, Java, Python, bash, Logo \\
+Computer Languages & JavaScript, Ruby, C++, R, SQL, Java, Python, bash, Logo \\
 Operating Systems & Linux, Ubuntu, CentOS, Windows, Mac OS \\
 Protocols \& APIs & XML, JSON, REST \\
 Databases & PostgreSQL, Redis, MySQL, MongoDB, Sqlite3, Microsoft SQL \\
@@ -101,7 +96,7 @@ Reading & Brooks' The Mythical Man-Month, DeMarco \& Lister's Peopleware, \\
 \item UM College of Engineering Leadership Honor Society | Ann Arbor, MI | 1995-1996
 \item Town Meeting Member | Swampscott, MA | 2018-2019 
 \item Cubmaster Pack 55 | Swampscott, MA | 2018-2019 
-\item Programmer, Brewer, Surfer, Telemark Skier
+\item Programmer, Gardener, Brewer, Snowboarder
 \end{rSection}
 
 \end{document}
