--- a/resume.tex
+++ b/resume.tex
@@ -15,7 +15,7 @@
 \begin{rSection}{Experience}
 
 \begin{rSubsection}{Meta Tooth LLC}{December 2018 - present}{Principal}{Swampscott, MA}
-\item A software, product, and business development consultancy in dental \& advanced manufacturing.
+\item Technology for dentists, dental labs, startups, and consumers.
 \end{rSubsection}
 
 \begin{rSubsection}{Signature Orthodontics Inc}{August 2017 - December 2018}{VP of Software}{Cambridge, MA}
@@ -73,20 +73,20 @@ High School Diploma
 
 \begin{rSection}{Technical Strengths}
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Computer Languages & JavaScript, Ruby, C++, R, SQL, Java, Python, bash, Logo \\
-Operating Systems & Android, Mac OS, Windows, Ubuntu \\
-Protocols \& APIs & XML, JSON, REST \\
-Databases & MS SQL Server, MySQL, PostgreSQL, Redis, Sqlite3 \\
-Web \& App servers & NGINX, puma, Apache, thin \\
-Tools & Git, Emacs, Azure DevOps (visualstudio.com), Subversion, Cygwin, \\
- & CMake, Heroku, AWS S3,  Hadoop \\
-Frameworks & Ember.js, Sinatra.rb, three.js, OpenGL, Ruby on Rails, VTK, \\
- & CGAL, FLTK, Unidraw \\
-Methodology & KanBan, Kaizen, Agile, Continuous Improvement \\
-Reading & Brooks' The Mythical Man-Month, DeMarco \& Lister's Peopleware, \\
- & Gamma, Helm, Johnson, and Vlissides's Design Patterns, Booch's UML, \\
- & Fowler's Continuous Integration, Spolsky's Joel on Software, \\
- & Atwood's Coding Horror, Beck's XP, \\
+Computer Languages & Bash, C++, Java, JavaScript, R, Ruby, SQL \\
+Operating Systems & Android, Mac OS, Ubuntu, Windows \\
+Protocols \& APIs & JSON, REST, XML \\
+Databases & Google Firestore, MS SQL Server, MySQL, PostgreSQL, Redis, Sqlite3 \\
+Web \& App servers & Apache, NGINX, puma, thin \\
+Tools & AWS, Azure, BitBucket Pipelines, CMake, Cygwin, Emacs, eslint, Git, Google Firebase, Hadoop, Heroku, Jira, ruby-lint, rubocop, Subversion, Visual Studio Code, webpack, WordPress \\
+Frameworks & CGAL, FLTK, Node, OpenGL, Ruby on Rails, Sinatra.rb, \\
+ & three.js, Unidraw, VTK, Vue.js, WebGL \\
+Methodology & Agile, Continuous Improvement, Kaizen, KanBan \\
+Reading & Atwood's Coding Horror, Beck's XP, Booch's UML, \\
+ & Brooks' The Mythical Man-Month, DeMarco \& Lister's Peopleware, \\
+ & Fowler's Continuous Integration, \\
+ & Spolsky's Joel on Software, \\
+ & Gamma, Helm, Johnson, and Vlissides's Design Patterns, \\
  & Tufte's Visual Display of Quantitative Information
 \end{tabular}
 \end{rSection}
