--- a/resume.tex
+++ b/resume.tex
@@ -78,7 +78,7 @@ Operating Systems & Android, Mac OS, Ubuntu, Windows \\
 Protocols \& APIs & JSON, REST, XML \\
 Databases & Google Firestore, MS SQL Server, MySQL, PostgreSQL, Redis, Sqlite3 \\
 Web \& App servers & Apache, NGINX, puma, thin \\
-Tools & AWS, Azure, BitBucket Pipelines, CMake, Cygwin, Emacs, eslint, Git, Google Firebase, Hadoop, Heroku, Jira, ruby-lint, rubocop, Subversion, Visual Studio Code, webpack, WordPress \\
+Tools & AWS, Azure, BitBucket Pipelines, CMake, Cygwin, Docker, Emacs, eslint, Git, Google Firebase, Hadoop, Heroku, Jira, ruby-lint, rubocop, Subversion, Visual Studio Code, webpack, WordPress \\
 Frameworks & CGAL, FLTK, Node, OpenGL, Ruby on Rails, Sinatra.rb, \\
  & three.js, Unidraw, VTK, Vue.js, WebGL \\
 Methodology & Agile, Continuous Improvement, Kaizen, KanBan \\
