--- a/resume.tex
+++ b/resume.tex
@@ -20,14 +20,14 @@
 
 \begin{rSubsection}{Signature Orthodontics Inc}{August 2017 - December 2018}{VP of Software}{Cambridge, MA}
 \item Responsible for medical device and workflow software in support of company's first sale.  Led development and growth of software team. Contributed system architecture, implementation, regulatory documentation, project management, and product management.
-\item \textbf{K183542} Signature Orthodontics System, 2019-01-02
-\item \textbf{K181271} Signature Orthodontics System, 2018-06-13
+\item \textbf{510(K) No. K183542} Signature Orthodontics System, 2019-01-02
+\item \textbf{510(K) No. K181271} Signature Orthodontics System, 2018-06-13
 \end{rSubsection}
 
 
 \begin{rSubsection}{Atlantis - Dentsply Sirona Implants}{June 2014 - August 2017}{Director, Global Digital Product Development}{Waltham, MA}
 \item Responsible for strategy and project planning to meet business goals of networked workflows.  Led development of data analysis \& visualization tools to identify key performance indicators.
-\item \textbf{US Patent \#D787,061S} SCAN BODY FOR DENTAL IMPLANT PROCEDURES
+\item \textbf{US Patent No. D787,061S} SCAN BODY FOR DENTAL IMPLANT PROCEDURES
 \end{rSubsection}
 
 \begin{rSubsection}{Atlantis - DENTSPLY Implants}{August 2010 - May 2014}{Manager, Global Digital Product Development}{Waltham, MA}
@@ -86,8 +86,7 @@ Frameworks & CGAL, FLTK, Node, OpenGL, Ruby on Rails, Sinatra.rb, \\
 Methodology & Agile, Continuous Improvement, Kaizen, KanBan \\
 Reading & Atwood's Coding Horror, Beck's XP, Booch's UML, \\
  & Brooks' The Mythical Man-Month, DeMarco \& Lister's Peopleware, \\
- & Fowler's Continuous Integration, \\
- & Spolsky's Joel on Software, \\
+ & Fowler's Continuous Integration, Spolsky's Joel on Software, \\
  & Gamma, Helm, Johnson, and Vlissides's Design Patterns, \\
  & Tufte's Visual Display of Quantitative Information
 \end{tabular}
