Update company name

--- a/resume.tex
+++ b/resume.tex
@@ -18,7 +18,7 @@
 \item Technology for dentists, dental labs, startups, and consumers.
 \end{rSubsection}
 
-\begin{rSubsection}{Signature Orthodontics Inc}{August 2017 - December 2018}{VP of Software}{Cambridge, MA}
+\begin{rSubsection}{LightForce Orthodontics Inc}{August 2017 - December 2018}{VP of Software}{Cambridge, MA}
 \item Responsible for medical device and workflow software in support of company's first sale.  Led development and growth of software team. Contributed system architecture, implementation, regulatory documentation, project management, and product management.
 \item \textbf{510(K) No. K183542} Signature Orthodontics System, 2019-01-02
 \item \textbf{510(K) No. K181271} Signature Orthodontics System, 2018-06-13
@@ -34,11 +34,9 @@
 \item Responsible for business relationships and collaboration agreements with Partners on digital workflows.  Led development of API to meet business objectives.
 \end{rSubsection}
 
-
 \begin{rSubsection}{Atlantis - Astra Tech, Inc}{January 2007 - July 2010}{Consulting Software Engineer}{Waltham, MA}
 \item Responsible for front-end and API development. Software lead for industry leading B2B platform. Collaborated with Partners to deliver integrated workflows.
 \end{rSubsection}
-
 
 \begin{rSubsection}{Atlantis Components, Inc}{August 2000 - Januaray 2007}{Senior Software Engineer}{Cambridge, MA}
 \item Responsible for automation of acquisition, design, and manufacturing workflows. Software Lead for industry's first CAD/CAM dental implant abutment.
