--- a/resume.tex
+++ b/resume.tex
@@ -27,6 +27,7 @@
 
 \begin{rSubsection}{Atlantis - Dentsply Sirona Implants}{June 2014 - August 2017}{Director, Global Digital Product Development}{Waltham, MA}
 \item Responsible for strategy and project planning to meet business goals of networked workflows.  Led development of data analysis \& visualization tools to identify key performance indicators.
+\item \textbf{US Patent No. 10,390,910 B2} INTEGRATED DENTAL IMPLANT COMPONENT AND TOOL FOR PLACEMENT OF A DENTAL IMPLANT COMPONENT
 \item \textbf{US Patent No. D787,061S} SCAN BODY FOR DENTAL IMPLANT PROCEDURES
 \end{rSubsection}
 
