Add links, fixup dates

--- a/resume.tex
+++ b/resume.tex
@@ -1,10 +1,10 @@
 \documentclass{resume}
 
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry}
+\usepackage{hyperref}
 
 \name{Terry G Lorber}
-\address{30 Forest Ave \\ Swampscott, MA 01907}
-\address{+1~$\cdot$~781~$\cdot$~632~$\cdot$~0733 \\ tgl@rideside.net}
+\address{\href{https://www.rideside.net/~tgl}{www.rideside.net/\texttildelow tgl} \\ \href{mailto:tgl@rideside.net}{tgl@rideside.net} \\ +1--781--632--0733}
                                         
 \begin{document}
   
@@ -14,37 +14,38 @@
 
 \begin{rSection}{Experience}
 
-\begin{rSubsection}{Meta Tooth LLC}{December 2018 - present}{Principal}{Swampscott, MA}
+\begin{rSubsection}{\href{https://metatooth.com}{Metatooth LLC}}{December 2018 - present}{Owner}{Swampscott, MA}
 \item Technology for dentists, dental labs, startups, and consumers.
 \end{rSubsection}
 
-\begin{rSubsection}{LightForce Orthodontics Inc}{August 2017 - December 2018}{VP of Software}{Cambridge, MA}
+\begin{rSubsection}{\href{https://lightforceortho.com}{LightForce Orthodontics Inc}}{August 2017 - December 2018}{VP of Software}{Cambridge, MA}
 \item Responsible for medical device and workflow software in support of company's first sale.  Led development and growth of software team. Contributed system architecture, implementation, regulatory documentation, project management, and product management.
 \item \textbf{510(K) No. K183542} Signature Orthodontics System, 2019-01-02
 \item \textbf{510(K) No. K181271} Signature Orthodontics System, 2018-06-13
 \end{rSubsection}
 
 
-\begin{rSubsection}{Atlantis - Dentsply Sirona Implants}{June 2014 - August 2017}{Director, Global Digital Product Development}{Waltham, MA}
+\begin{rSubsection}{\href{https://dentsplysirona.com}{Atlantis - Dentsply Sirona Implants}}{June 2014 - August 2017}{Director, Global Digital Product Development}{Waltham, MA}
 \item Responsible for strategy and project planning to meet business goals of networked workflows.  Led development of data analysis \& visualization tools to identify key performance indicators.
 \item \textbf{US Patent No. 10,390,910 B2} INTEGRATED DENTAL IMPLANT COMPONENT AND TOOL FOR PLACEMENT OF A DENTAL IMPLANT COMPONENT
 \item \textbf{US Patent No. D787,061S} SCAN BODY FOR DENTAL IMPLANT PROCEDURES
 \end{rSubsection}
 
-\begin{rSubsection}{Atlantis - DENTSPLY Implants}{August 2010 - May 2014}{Manager, Global Digital Product Development}{Waltham, MA}
+\begin{rSubsection}{\href{https://dentsplysirona.com}{Atlantis - DENTSPLY Implants}}{August 2010 - May 2014}{Manager, Global Digital Product Development}{Waltham, MA}
 \item Responsible for business relationships and collaboration agreements with Partners on digital workflows.  Led development of API to meet business objectives.
 \end{rSubsection}
 
-\begin{rSubsection}{Atlantis - Astra Tech, Inc}{January 2007 - July 2010}{Consulting Software Engineer}{Waltham, MA}
+\begin{rSubsection}{\href{https://dentsplysirona.com}{Atlantis - Astra Tech, Inc}}{January 2007 - July 2010}{Consulting Software Engineer}{Waltham, MA}
 \item Responsible for front-end and API development. Software lead for industry leading B2B platform. Collaborated with Partners to deliver integrated workflows.
 \end{rSubsection}
 
-\begin{rSubsection}{Atlantis Components, Inc}{August 2000 - Januaray 2007}{Senior Software Engineer}{Cambridge, MA}
+\begin{rSubsection}{\href{https://dentsplysirona.com}{Atlantis Components, Inc}}{August 2000 - Januaray 2007}{Senior Software Engineer}{Cambridge, MA}
 \item Responsible for automation of acquisition, design, and manufacturing workflows. Software Lead for industry's first CAD/CAM dental implant abutment.
 \end{rSubsection}
 
+\pagebreak
 
-\begin{rSubsection}{Freudenberg-NOK General Partnership}{June 1996 - September 1999}{Product Engineer}{Bristol, NH}
+\begin{rSubsection}{\href{https://fst.com}{Freudenberg-NOK General Partnership}}{June 1996 - September 1999}{Product Engineer}{Bristol, NH}
 \item My first and great experience in Kaizen.
 \end{rSubsection}
 
@@ -70,20 +71,20 @@ High School Diploma
 \end{rSection}
 
 
-\begin{rSection}{Technical Strengths}
+\begin{rSection}{Skills}
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Computer Languages & Bash, C++, Java, JavaScript, R, Ruby, SQL \\
-Operating Systems & Android, Mac OS, Ubuntu, Windows \\
-Protocols \& APIs & JSON, REST, XML \\
+Computer Languages & Bash, C/C++, JavaScript, Python, R, Ruby, SQL \\
+Operating Systems & Ubuntu, Windows \\
+Protocols \& APIs & JSON, REST, Twitter, Tumblr, XML \\
 Databases & Google Firestore, MS SQL Server, MySQL, PostgreSQL, Redis, Sqlite3 \\
 Web \& App servers & Apache, NGINX, puma, thin \\
 Tools & AWS, Azure, BitBucket Pipelines, CMake, Cygwin, Docker, Emacs, \\
- & eslint, Git, Google Firebase, Hadoop, Heroku, Jira, ruby-lint, rubocop, \\
+ & eslint, Git, Hadoop, Heroku, Jira, ruby-lint, rubocop, \\
  & Subversion, Visual Studio Code, webpack, WordPress \\
-Frameworks & CGAL, FLTK, Node, OpenGL, Ruby on Rails, Sinatra.rb, \\
- & three.js, Unidraw, VTK, Vue.js, WebGL \\
-Methodology & Agile, Continuous Improvement, Kaizen, KanBan \\
-Reading & Atwood's Coding Horror, Beck's XP, Booch's UML, \\
+Frameworks & CGAL, FLTK, Node.js, OpenGL, Ruby on Rails, Sinatra.rb, \\
+ & three.js, Unidraw, VTK, Vue.js \\
+Methodologies & Agile, Continuous Improvement, Kaizen, KanBan \\
+Infleuncers & Atwood's Coding Horror, Beck's XP, Booch's UML, \\
  & Brooks' The Mythical Man-Month, DeMarco \& Lister's Peopleware, \\
  & Fowler's Continuous Integration, Spolsky's Joel on Software, \\
  & Gamma, Helm, Johnson, and Vlissides's Design Patterns, \\
@@ -94,8 +95,8 @@ Reading & Atwood's Coding Horror, Beck's XP, Booch's UML, \\
 \begin{rSection}{Honors \& Interests}
 \item Eagle Scout Troop 295 | Concord, NH | 1991
 \item UM College of Engineering Leadership Honor Society | Ann Arbor, MI | 1995-1996
-\item Town Meeting Member | Swampscott, MA | 2018-2019 
-\item Cubmaster Pack 55 | Swampscott, MA | 2018-2019 
+\item Town Meeting Member | Swampscott, MA | 2018-2020
+\item Cubmaster Pack 55 | Swampscott, MA | 2018-2020
 \item Programmer, Gardener, Brewer, Snowboarder
 \end{rSection}
 
