updated education and metatooth experience

--- a/resume.tex
+++ b/resume.tex
@@ -15,7 +15,8 @@
 \begin{rSection}{Experience}
 
 \begin{rSubsection}{\href{https://metatooth.com}{Metatooth LLC}}{December 2018 - present}{Owner}{Swampscott, MA}
-\item Technology for dentists, dental labs, startups, and consumers.
+\item Technology for startups and consumers. Consulting services including automation of business processes for the dental and cannabis industries.
+\item \textbf{B142342} Registered Agent, Cultivator, Commonwealth of Massachusetts, 2022-08-27
 \end{rSubsection}
 
 \begin{rSubsection}{\href{https://lightforceortho.com}{LightForce Orthodontics Inc}}{August 2017 - December 2018}{VP of Software}{Cambridge, MA}
@@ -52,6 +53,9 @@
 \end{rSection}
 
 \begin{rSection}{Education}
+
+\item {\bf EforAll Lynn, Lynn, MA} \hfill {\em March 2020} \\
+Winter 2020 Cohort
 
 \item {\bf DENTSPLY International Leadership Series, Frankfurt, Germany} \hfill {\em May 2014} \\
 Advanced Management Practices
