refine for dental

--- a/resume.tex
+++ b/resume.tex
@@ -15,8 +15,7 @@
 \begin{rSection}{Experience}
 
 \begin{rSubsection}{\href{https://metatooth.com}{Metatooth LLC}}{December 2018 - present}{Owner}{Swampscott, MA}
-\item Technology for startups and consumers. Consulting services including automation of business processes for the dental and cannabis industries.
-\item \textbf{B142342} Registered Agent, Cultivator, Commonwealth of Massachusetts, 2022-08-27
+\item Technology for startups and consumers. Consultant and advisor to companies on market research, technology integration, and workflow automation.
 \end{rSubsection}
 
 \begin{rSubsection}{\href{https://lightforceortho.com}{LightForce Orthodontics Inc}}{August 2017 - December 2018}{VP of Software}{Cambridge, MA}
@@ -97,11 +96,11 @@ Infleuncers & Atwood's Coding Horror, Beck's XP, Booch's UML, \\
 \end{rSection}
 
 \begin{rSection}{Honors \& Interests}
-\item Eagle Scout Troop 295 | Concord, NH | 1991
+\item Gardener, Brewer, Telemark skier
+\item Town Meeting Member | Swampscott, MA | 2018-2021
+\item Cubmaster Pack 55 | Swampscott, MA | 2018-2021
 \item UM College of Engineering Leadership Honor Society | Ann Arbor, MI | 1995-1996
-\item Town Meeting Member | Swampscott, MA | 2018-2020
-\item Cubmaster Pack 55 | Swampscott, MA | 2018-2020
-\item Programmer, Gardener, Brewer, Snowboarder
+\item Eagle Scout Troop 295 | Concord, NH | 1991
 \end{rSection}
 
 \end{document}
