--- a/resume.tex
+++ b/resume.tex
@@ -14,6 +14,15 @@
 
 \begin{rSection}{Experience}
 
+\begin{rSubsection}{\href{https://alloyenterprises.co}{Alloy Enterprises, Inc}}{June 2022 - present}{Lead Software Engineer}{Somerville, MA}
+\item Technology for startups and consumers. Consultant and advisor to companies on market research, technology integration, and workflow automation.
+\end{rSubsection}
+
+\begin{rSubsection}{\href{https://lynngrown.com}{Metatooth LLC d/b/a Lynn Grown}}{June 2022 - present}{Owner}{Lynn, MA}
+\item Low-THC cannabis grown in the City of Firsts.
+\end{rSubsection}
+
+
 \begin{rSubsection}{\href{https://metatooth.com}{Metatooth LLC}}{December 2018 - present}{Owner}{Swampscott, MA}
 \item Technology for startups and consumers. Consultant and advisor to companies on market research, technology integration, and workflow automation.
 \end{rSubsection}
@@ -76,13 +85,13 @@ High School Diploma
 
 \begin{rSection}{Skills}
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Computer Languages & Bash, C/C++, JavaScript, Python, R, Ruby, SQL \\
-Operating Systems & Ubuntu, Windows \\
+Computer Languages & Bash, C++, JavaScript, Python, R, Ruby, SQL \\
+Operating Systems & Linux (Ubuntu), macOs, Windows \\
 Protocols \& APIs & JSON, REST, Twitter, Tumblr, XML \\
 Databases & Google Firestore, MS SQL Server, MySQL, PostgreSQL, Redis, Sqlite3 \\
 Web \& App servers & Apache, NGINX, puma, thin \\
 Tools & AWS, Azure, BitBucket Pipelines, CMake, Cygwin, Docker, Emacs, \\
- & eslint, Git, Hadoop, Heroku, Jira, ruby-lint, rubocop, \\
+ & eslint, GitHub, Hadoop, Heroku, Jira, pylint, ruby-lint, rubocop, \\
  & Subversion, Visual Studio Code, webpack, WordPress \\
 Frameworks & CGAL, FLTK, Node.js, OpenGL, Ruby on Rails, Sinatra.rb, \\
  & three.js, Unidraw, VTK, Vue.js \\
@@ -97,7 +106,7 @@ Infleuncers & Atwood's Coding Horror, Beck's XP, Booch's UML, \\
 
 \begin{rSection}{Honors \& Interests}
 \item Gardener, Brewer, Telemark skier
-\item Town Meeting Member | Swampscott, MA | 2018-2021
+\item Town Meeting Member | Swampscott, MA | 2018-2022
 \item Cubmaster Pack 55 | Swampscott, MA | 2018-2021
 \item UM College of Engineering Leadership Honor Society | Ann Arbor, MI | 1995-1996
 \item Eagle Scout Troop 295 | Concord, NH | 1991
