--- a/resume.tex
+++ b/resume.tex
@@ -14,20 +14,19 @@
 
 \begin{rSection}{Experience}
 
-\begin{rSubsection}{\href{https://alloyenterprises.co}{Alloy Enterprises, Inc}}{June 2022 - present}{Lead Software Engineer}{Somerville, MA}
-\item Technology for startups and consumers. Consultant and advisor to companies on market research, technology integration, and workflow automation.
+\begin{rSubsection}{\href{https://alloyenterprises.co}{Alloy Enterprises}}{June 2022 - present}{Software Architect}{Burlington, MA}
+\item Planned, built, and maintained CAD/CAM suite for Alloy's novel stack forging process.
 \end{rSubsection}
 
-\begin{rSubsection}{\href{https://lynngrown.com}{Metatooth LLC d/b/a Lynn Grown}}{June 2022 - present}{Owner}{Lynn, MA}
+\begin{rSubsection}{\href{https://lynngrown.com}{Lynn Grown}}{June 2022 - present}{Owner}{Lynn, MA}
 \item Low-THC cannabis grown in the City of Firsts.
 \end{rSubsection}
 
-
-\begin{rSubsection}{\href{https://metatooth.com}{Metatooth LLC}}{December 2018 - present}{Owner}{Swampscott, MA}
-\item Technology for startups and consumers. Consultant and advisor to companies on market research, technology integration, and workflow automation.
+\begin{rSubsection}{\href{https://metatooth.com}{Metatooth}}{December 2018 - present}{Owner}{Swampscott, MA}
+\item Product development.
 \end{rSubsection}
 
-\begin{rSubsection}{\href{https://lightforceortho.com}{LightForce Orthodontics Inc}}{August 2017 - December 2018}{VP of Software}{Cambridge, MA}
+\begin{rSubsection}{\href{https://lightforceortho.com}{LightForce Orthodontics}}{August 2017 - December 2018}{VP of Software}{Cambridge, MA}
 \item Responsible for medical device and workflow software in support of company's first sale.  Led development and growth of software team. Contributed system architecture, implementation, regulatory documentation, project management, and product management.
 \item \textbf{510(K) No. K183542} Signature Orthodontics System, 2019-01-02
 \item \textbf{510(K) No. K181271} Signature Orthodontics System, 2018-06-13
@@ -85,8 +84,8 @@ High School Diploma
 
 \begin{rSection}{Skills}
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Computer Languages & Bash, C++, JavaScript, Python, R, Ruby, SQL \\
-Operating Systems & Linux (Ubuntu), macOs, Windows \\
+Computer Languages & Bash, C/C++, JavaScript, Python, R, Ruby, SQL, TypeScript \\
+Operating Systems & Linux (Ubuntu), macOS, Windows \\
 Protocols \& APIs & JSON, REST, Twitter, Tumblr, XML \\
 Databases & Google Firestore, MS SQL Server, MySQL, PostgreSQL, Redis, Sqlite3 \\
 Web \& App servers & Apache, NGINX, puma, thin \\
@@ -105,8 +104,8 @@ Infleuncers & Atwood's Coding Horror, Beck's XP, Booch's UML, \\
 \end{rSection}
 
 \begin{rSection}{Honors \& Interests}
-\item Gardener, Brewer, Telemark skier
-\item Town Meeting Member | Swampscott, MA | 2018-2022
+\item Programmer, Gardener, Brewer, Hiker, Surfer, Telemark skier
+\item Town Meeting Member | Swampscott, MA | 2018-2023
 \item Cubmaster Pack 55 | Swampscott, MA | 2018-2021
 \item UM College of Engineering Leadership Honor Society | Ann Arbor, MI | 1995-1996
 \item Eagle Scout Troop 295 | Concord, NH | 1991
