--- a/resume.tex
+++ b/resume.tex
@@ -27,27 +27,23 @@
 \end{rSubsection}
 
 \begin{rSubsection}{\href{https://lightforceortho.com}{LightForce Orthodontics}}{August 2017 - December 2018}{VP of Software}{Cambridge, MA}
-\item Responsible for medical device and workflow software in support of company's first sale.  Led development and growth of software team. Contributed system architecture, implementation, regulatory documentation, project management, and product management.
+\item Responsible for medical device and workflow software in support of company's first sale. Contributed system architecture, implementation, regulatory documentation, project management, and product management.
 \item \textbf{510(K) No. K183542} Signature Orthodontics System, 2019-01-02
 \item \textbf{510(K) No. K181271} Signature Orthodontics System, 2018-06-13
 \end{rSubsection}
 
 
-\begin{rSubsection}{\href{https://dentsplysirona.com}{Atlantis - Dentsply Sirona Implants}}{June 2014 - August 2017}{Director, Global Digital Product Development}{Waltham, MA}
-\item Responsible for strategy and project planning to meet business goals of networked workflows.  Led development of data analysis \& visualization tools to identify key performance indicators.
+\begin{rSubsection}{\href{https://dentsplysirona.com}{Atlantis - Dentsply Sirona}}{August 2010 - August 2017}{Director, Global Digital Product Development}{Waltham, MA}
+\item Responsible for strategy, collaboration agreements, project planning, and implementation to meet business goals of networked workflows with business partners.
 \item \textbf{US Patent No. 10,390,910 B2} INTEGRATED DENTAL IMPLANT COMPONENT AND TOOL FOR PLACEMENT OF A DENTAL IMPLANT COMPONENT
 \item \textbf{US Patent No. D787,061S} SCAN BODY FOR DENTAL IMPLANT PROCEDURES
 \end{rSubsection}
 
-\begin{rSubsection}{\href{https://dentsplysirona.com}{Atlantis - DENTSPLY Implants}}{August 2010 - May 2014}{Manager, Global Digital Product Development}{Waltham, MA}
-\item Responsible for business relationships and collaboration agreements with Partners on digital workflows.  Led development of API to meet business objectives.
+\begin{rSubsection}{\href{https://dentsplysirona.com}{Atlantis - Astra Tech}}{January 2007 - July 2010}{Consulting Software Engineer}{Waltham, MA}
+\item Responsible for front-end and API development. Software lead for industry leading B2B platform. Collaborated with business partners to deliver integrated workflows.
 \end{rSubsection}
 
-\begin{rSubsection}{\href{https://dentsplysirona.com}{Atlantis - Astra Tech, Inc}}{January 2007 - July 2010}{Consulting Software Engineer}{Waltham, MA}
-\item Responsible for front-end and API development. Software lead for industry leading B2B platform. Collaborated with Partners to deliver integrated workflows.
-\end{rSubsection}
-
-\begin{rSubsection}{\href{https://dentsplysirona.com}{Atlantis Components, Inc}}{August 2000 - January 2007}{Senior Software Engineer}{Cambridge, MA}
+\begin{rSubsection}{\href{https://dentsplysirona.com}{Atlantis Components}}{August 2000 - January 2007}{Senior Software Engineer}{Cambridge, MA}
 \item Responsible for automation of acquisition, design, and manufacturing workflows. Software Lead for industry's first CAD/CAM dental implant abutment.
 \end{rSubsection}
 
@@ -85,7 +81,7 @@ High School Diploma
 \begin{rSection}{Skills}
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 Computer Languages & Bash, C/C++, JavaScript, Python, R, Ruby, SQL, TypeScript \\
-Operating Systems & Linux (Ubuntu), macOS, Windows \\
+Operating Systems & Browsers (Chrome, Firefox), Linux (Ubuntu), macOS, Windows \\
 Protocols \& APIs & JSON, REST, Twitter, Tumblr, XML \\
 Databases & Google Firestore, MS SQL Server, MySQL, PostgreSQL, Redis, Sqlite3 \\
 Web \& App servers & Apache, NGINX, puma, thin \\
