--- a/resume.tex
+++ b/resume.tex
@@ -9,87 +9,73 @@
 \begin{document}
   
 \begin{rSection}{Profile}
-\item Consensus-building leader of cross-functional product development teams. I've developed strategy and implemented product roadmaps for startups to \$100MM global businesses. Pro-active project manager experienced with quality systems (ISO 9000, 21 CFR 820).
+\item Consensus-building leader of cross-functional product development teams. I've developed strategy and implemented product roadmaps for startups to \$100mil global businesses. Pro-active project manager experienced with quality systems for medical devices (21 CFR 820, IEC 62304, ISO 14971).
 \end{rSection}
 
 \begin{rSection}{Experience}
 
-\begin{rSubsection}{\href{https://alloyenterprises.co}{Alloy Enterprises}}{June 2022 - present}{Software Architect}{Burlington, MA}
-\item Planned, built, and maintained CAD/CAM suite for Alloy's novel stack forging process.
-\end{rSubsection}
-
-\begin{rSubsection}{\href{https://lynngrown.com}{Lynn Grown}}{June 2022 - present}{Owner}{Lynn, MA}
-\item Low-THC cannabis grown in the City of Firsts.
+\begin{rSubsection}{\href{https://alloyenterprises.co}{Alloy Enterprises}}{June 2022 - November 2024}{Software Engineer, Architect}{Burlington, MA}
+\item Planned, built, and maintained proprietary CAD/CAM software to support Alloy's novel manufacturing process. Collaborated across disciplines to unlock aluminum components at scale.
+\item Software Engineering, Computational Geometry, Manufacturing, Python, C++
 \end{rSubsection}
 
 \begin{rSubsection}{\href{https://metatooth.com}{Metatooth}}{December 2018 - present}{Owner}{Swampscott, MA}
-\item Product development.
+\item Consulting services in advanced manufacturing, technology integration, and product development.
 \end{rSubsection}
 
 \begin{rSubsection}{\href{https://lightforceortho.com}{LightForce Orthodontics}}{August 2017 - December 2018}{VP of Software}{Cambridge, MA}
-\item Responsible for medical device and workflow software in support of company's first sale. Contributed system architecture, implementation, regulatory documentation, project management, and product management.
+\item Joined this pre-seed round dental startup as first software hire. Responsible for medical device and workflow software in support of company's first sale. Deployed cloud-native software stack for LightForce's first 510(K). Contributed system architecture, implementation, regulatory documentation, project management, and product management.
+\item Medical Devices, FDA, JavaScript, C++, Computational Geometry
 \item \textbf{510(K) No. K183542} Signature Orthodontics System, 2019-01-02
 \item \textbf{510(K) No. K181271} Signature Orthodontics System, 2018-06-13
 \end{rSubsection}
 
 
 \begin{rSubsection}{\href{https://dentsplysirona.com}{Atlantis - Dentsply Sirona}}{August 2010 - August 2017}{Director, Global Digital Product Development}{Waltham, MA}
-\item Responsible for strategy, collaboration agreements, project planning, and implementation to meet business goals of networked workflows with business partners.
+\item Responsible for digital dentistry strategy and project planning for \$100mil global business. Leader of cross-functional product development team that launched Atlantis' first digital product. Collaborated with business partners to deliver integrated digital workflows.
+\item Product Development, Cross-functional Team Leadership, Medical Devices, Manufacturing, Business Development
 \item \textbf{US Patent No. 10,390,910 B2} INTEGRATED DENTAL IMPLANT COMPONENT AND TOOL FOR PLACEMENT OF A DENTAL IMPLANT COMPONENT
 \item \textbf{US Patent No. D787,061S} SCAN BODY FOR DENTAL IMPLANT PROCEDURES
 \end{rSubsection}
 
 \begin{rSubsection}{\href{https://dentsplysirona.com}{Atlantis - Astra Tech}}{January 2007 - July 2010}{Consulting Software Engineer}{Waltham, MA}
-\item Responsible for front-end and API development. Software lead for industry leading B2B platform. Collaborated with business partners to deliver integrated workflows.
+\item Technical owner of industry leading B2B platform. Full stack development using JavaScript, Ruby on Rails, PostgreSQL, and C++. Collaborated with business partners to deliver integrated digital dentistry workflows.
+\item Software Engineering, Medical Devices, Manufacturing, Ruby on Rails, C++, Computational Geometry
 \end{rSubsection}
 
 \begin{rSubsection}{\href{https://dentsplysirona.com}{Atlantis Components}}{August 2000 - January 2007}{Senior Software Engineer}{Cambridge, MA}
-\item Responsible for automation of acquisition, design, and manufacturing workflows. Software Lead for industry's first CAD/CAM dental implant abutment.
+\item First software hire for this dental startup. Supported sales \& manufacture of industry's first CAD/CAM dental implant abutment. Automation of data acquisition, product design, and manufacturing workflows
+\item Software Engineering, Medical Devices, Manufacturing, C++, Ruby on Rails
 \end{rSubsection}
 
-\pagebreak
-
-\begin{rSubsection}{\href{https://fst.com}{Freudenberg-NOK General Partnership}}{June 1996 - September 1999}{Product Engineer}{Bristol, NH}
-\item My first and great experience in Kaizen.
+\begin{rSubsection}{\href{https://fst.com}{Freudenberg Sealing Technologies}}{June 1996 - September 1999}{Product Engineer}{Bristol, NH}
+\item Product design, prototyping, and testing in support of sales and manufacturing. My first experience with Kaizen and continuous improvement culture.
+\item C, Siemens NX, Computer-Aided Design (CAD), Manufacturing
 \end{rSubsection}
 
 \end{rSection}
 
 \begin{rSection}{Education}
 
-\item {\bf EforAll Lynn, Lynn, MA} \hfill {\em March 2020} \\
-Winter 2020 Cohort
-
-\item {\bf DENTSPLY International Leadership Series, Frankfurt, Germany} \hfill {\em May 2014} \\
-Advanced Management Practices
-
 \item {\bf Boston University, Boston, MA} \hfill {\em September 2013} \\
 M.S. in Computer Science
 
-\item {\bf Boston University, Boston, MA} \hfill {\em May 2010} \\
-Undergraduate Certificate in Software Development
-
 \item {\bf University of Michigan, Ann Arbor, MI} \hfill {\em May 1996} \\
 B.S. in Engineering (Mechanical Engineering)
-
-\item {\bf Concord High School, Concord, NH} \hfill {\em May 1992} \\
-High School Diploma
 
 \end{rSection}
 
 
 \begin{rSection}{Skills}
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Computer Languages & Bash, C/C++, JavaScript, Python, R, Ruby, SQL, TypeScript \\
+Computer Languages & Bash, C++, JavaScript, Python, R, Ruby, SQL, TypeScript \\
 Operating Systems & Browsers (Chrome, Firefox), Linux (Ubuntu), macOS, Windows \\
-Protocols \& APIs & JSON, REST, Twitter, Tumblr, XML \\
-Databases & Google Firestore, MS SQL Server, MySQL, PostgreSQL, Redis, Sqlite3 \\
-Web \& App servers & Apache, NGINX, puma, thin \\
-Tools & AWS, Azure, BitBucket Pipelines, CMake, Cygwin, Docker, Emacs, \\
- & eslint, GitHub, Hadoop, Heroku, Jira, pylint, ruby-lint, rubocop, \\
- & Subversion, Visual Studio Code, webpack, WordPress \\
-Frameworks & CGAL, FLTK, Node.js, OpenGL, Ruby on Rails, Sinatra.rb, \\
- & three.js, Unidraw, VTK, Vue.js \\
+Protocols \& APIs & HTTPS, JSON, REST, RPC, WSS, XML, YAML \\
+Databases & MS SQL Server, PostgreSQL, Redis, Sqlite3 \\
+Web \& App servers & flask, NGINX, node.js, puma \\
+Tools & AWS, Azure, CMake, Docker, Emacs, GitHub, Jira, WordPress \\
+Frameworks & CGAL, FLTK, Node.js, OpenGL, OpenMesh, Ruby on Rails, \\
+ & Sinatra.rb, three.js, Unidraw, VTK, Vue.js \\
 Methodologies & Agile, Continuous Improvement, Kaizen, KanBan \\
 Infleuncers & Atwood's Coding Horror, Beck's XP, Booch's UML, \\
  & Brooks' The Mythical Man-Month, DeMarco \& Lister's Peopleware, \\
@@ -99,9 +85,9 @@ Infleuncers & Atwood's Coding Horror, Beck's XP, Booch's UML, \\
 \end{tabular}
 \end{rSection}
 
-\begin{rSection}{Honors \& Interests}
+\begin{rSection}{Extra}
 \item Programmer, Gardener, Brewer, Hiker, Surfer, Telemark skier
-\item Town Meeting Member | Swampscott, MA | 2018-2023
+\item Town Meeting Member | Swampscott, MA | 2018-2024
 \item Cubmaster Pack 55 | Swampscott, MA | 2018-2021
 \item UM College of Engineering Leadership Honor Society | Ann Arbor, MI | 1995-1996
 \item Eagle Scout Troop 295 | Concord, NH | 1991
