--- a/resume.tex
+++ b/resume.tex
@@ -9,7 +9,7 @@
 \begin{document}
   
 \begin{rSection}{Profile}
-\item Consensus-building leader of cross-functional product development teams. I've developed strategy and implemented product roadmaps for startups to \$100mil global businesses. Pro-active project manager experienced with quality systems for medical devices (21 CFR 820, IEC 62304, ISO 14971).
+\item Consensus-building leader of cross-functional product development teams. I've developed strategy and implemented product roadmaps for startups to global businesses. Pro-active project manager experienced with quality systems for medical devices.
 \end{rSection}
 
 \begin{rSection}{Experience}
@@ -32,7 +32,7 @@
 
 
 \begin{rSubsection}{\href{https://dentsplysirona.com}{Atlantis - Dentsply Sirona}}{August 2010 - August 2017}{Director, Global Digital Product Development}{Waltham, MA}
-\item Responsible for digital dentistry strategy and project planning for \$100mil global business. Leader of cross-functional product development team that launched Atlantis' first digital product. Collaborated with business partners to deliver integrated digital workflows.
+\item Responsible for digital dentistry strategy and project planning for global business. Leader of cross-functional product development team that launched Atlantis' first digital product. Collaborated with business partners to deliver integrated digital workflows.
 \item Product Development, Cross-functional Team Leadership, Medical Devices, Manufacturing, Business Development
 \item \textbf{US Patent No. 10,390,910 B2} INTEGRATED DENTAL IMPLANT COMPONENT AND TOOL FOR PLACEMENT OF A DENTAL IMPLANT COMPONENT
 \item \textbf{US Patent No. D787,061S} SCAN BODY FOR DENTAL IMPLANT PROCEDURES
