--- a/resume.tex
+++ b/resume.tex
@@ -19,7 +19,7 @@
 \item Software Engineering, Computational Geometry, Manufacturing, Python, C++
 \end{rSubsection}
 
-\begin{rSubsection}{\href{https://metatooth.com}{Metatooth}}{December 2018 - present}{Owner}{Swampscott, MA}
+\begin{rSubsection}{Self-employed}{December 2018 - June 2022}{}{Swampscott, MA}
 \item Consulting services in advanced manufacturing, technology integration, and product development.
 \end{rSubsection}
 
